--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "jasmine-node": "1.0.13"
+    "jasmine-node": "1.0.13",
+    "wrench": "1.3.5"
   },
   "engines": {
     "node": ">= 0.6.0"
   },
   "scripts": {
-  	"test": "jasmine-node --junitreport build/test"
+  	"test": "node coverage --junitreport build/test"
   }
 }
