--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
-  "name": "jscoverage",
+  "name": "jscoverage-reporter",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "jasmine-node": "1.0.13",
+  "devDependencies": {
+    "jshint": "0.5.8",
+    "jasmine-node": "1.0.21",
     "wrench": "1.3.5"
   },
   "engines": {
     "node": ">= 0.6.0"
   },
   "scripts": {
-  	"test": "node coverage --junitreport build/test"
+    "pretest": "jshint src tools --config config/jshint.config.json && jshint test --config config/spec.jshint.config.json",
+    "test": "node tools/coverage --junitreport build/test",
+    "report": "node tools/report.js reports/"
   }
 }
